finalize glad support

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "engine/vendor/spdlog"]
 	path = engine/vendor/spdlog
 	url = https://github.com/gabime/spdlog
+[submodule "engine/vendor/glad"]
+	path = engine/vendor/glad
+	url = https://github.com/Dav1dde/glad
