--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -26,6 +26,7 @@ set(ENGINE_HEADER_FILES
   ${CMAKE_SOURCE_DIR}/engine/src/platform/linux/X11Window.h
 )
 
+set(GLAD_DIR "${CMAKE_SOURCE_DIR}/engine/vendor/glad")
 
 add_library(engine SHARED 
   ${ENGINE_SOURCE_FILES}
@@ -37,13 +38,27 @@ set_target_properties(engine PROPERTIES SOVERSION 1)
 target_include_directories(engine PRIVATE engine/src)
 include_directories(
   "${CMAKE_SOURCE_DIR}/engine/vendor/spdlog/include/spdlog"
+  "${GLAD_DIR}/include"
 )
 target_precompile_headers(engine PRIVATE ${CMAKE_SOURCE_DIR}/engine/src/bepch.h)
 
 add_subdirectory(${CMAKE_SOURCE_DIR}/engine/vendor/glfw-3.3.2)
-target_link_libraries(engine glfw)
+# target_include_directories(engine PUBLIC "${GLAD_DIR}/include")
+
+add_library(glad SHARED ${GLAD_DIR}/src/glad.c)
+# target_include_directories(glad PRIVATE "${GLAD_DIR}/include")
+
+
+#glad_add_library(glad SHARED MX API gl:core=3.3)
+
+
 find_package(OpenGL REQUIRED)
-target_link_libraries(engine OpenGL::GL)
+target_link_libraries(engine OpenGL::GL glad glfw)
+
+# add_library("glad" "${GLAD_DIR}/src/glad.c")
+# target_include_directories("glad" PRIVATE ${GLAD_DIR}/include)
+# target_include_directories(engine PRIVATE "${GLAD_DIR}/include")
+# target_link_libraries(engine "glad" "${CMAKE_DL_LIBS}")
 
 include(GNUInstallDirs)
 
