--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -2,15 +2,29 @@ cmake_minimum_required(VERSION 3.16)
 
 project(engine VERSION 0.0.1 DESCRIPTION "This is the bucket engine.")
 add_definitions(-DEXPORT_MOLECULE_DLL)
+set(imgui_root ${CMAKE_SOURCE_DIR}/engine/vendor/imgui)
 
 set(ENGINE_SOURCE_FILES
+  # sources
   ${CMAKE_SOURCE_DIR}/engine/src/engine/Application.cpp
   ${CMAKE_SOURCE_DIR}/engine/src/engine/Log.cpp
   ${CMAKE_SOURCE_DIR}/engine/src/engine/Layer.cpp
   ${CMAKE_SOURCE_DIR}/engine/src/engine/LayerStack.cpp
+  
+  #GUI
+  ${CMAKE_SOURCE_DIR}/engine/src/engine/imgui/ImGuiLayer.cpp
+  #platform
   ${CMAKE_SOURCE_DIR}/engine/src/platform/linux/X11Window.cpp
+  ${CMAKE_SOURCE_DIR}/engine/src/platform/opengl/imGUIOpenGLRenderer.cpp
+
+  #3rd party
+  ${imgui_root}/imgui.cpp
+  ${imgui_root}/imgui_demo.cpp
+  ${imgui_root}/imgui_draw.cpp
+  ${imgui_root}/imgui_widgets.cpp
 )
 set(ENGINE_HEADER_FILES
+  # sources
   ${CMAKE_SOURCE_DIR}/engine/src/engine.h
   ${CMAKE_SOURCE_DIR}/engine/src/engine/Application.h
   ${CMAKE_SOURCE_DIR}/engine/src/engine/Core.h
@@ -19,11 +33,27 @@ set(ENGINE_HEADER_FILES
   ${CMAKE_SOURCE_DIR}/engine/src/engine/Layer.h
   ${CMAKE_SOURCE_DIR}/engine/src/engine/LayerStack.h
   ${CMAKE_SOURCE_DIR}/engine/src/engine/Window.h
+  
+  #GUI
+  ${CMAKE_SOURCE_DIR}/engine/src/engine/imgui/ImGuiLayer.h
+  
+  # events
   ${CMAKE_SOURCE_DIR}/engine/src/engine/events/ApplicationEvent.h
   ${CMAKE_SOURCE_DIR}/engine/src/engine/events/Event.h
   ${CMAKE_SOURCE_DIR}/engine/src/engine/events/KeyEvent.h
   ${CMAKE_SOURCE_DIR}/engine/src/engine/events/MouseEvent.h
+  
+  #platform
   ${CMAKE_SOURCE_DIR}/engine/src/platform/linux/X11Window.h
+  ${CMAKE_SOURCE_DIR}/engine/src/platform/opengl/imGUIOpenGLRenderer.h
+
+  #3rd party
+  ${imgui_root}/imconfig.h
+  ${imgui_root}/imgui.h
+  ${imgui_root}/imgui_internal.h
+  ${imgui_root}/imstb_rectpack.h
+  ${imgui_root}/imstb_textedit.h
+  ${imgui_root}/imstb_truetype.h
 )
 
 set(GLAD_DIR "${CMAKE_SOURCE_DIR}/engine/vendor/glad")
@@ -39,24 +69,21 @@ target_include_directories(engine PRIVATE engine/src)
 include_directories(
   "${CMAKE_SOURCE_DIR}/engine/vendor/spdlog/include/spdlog"
   "${GLAD_DIR}/include"
+  "${imgui_root}"
 )
 target_precompile_headers(engine PRIVATE ${CMAKE_SOURCE_DIR}/engine/src/bepch.h)
 
 add_subdirectory(${CMAKE_SOURCE_DIR}/engine/vendor/glfw-3.3.2)
+add_library(glad SHARED ${GLAD_DIR}/src/glad.c)
+#add_subdirectory(${CMAKE_SOURCE_DIR}/engine/vendor/imgui)
 # target_include_directories(engine PUBLIC "${GLAD_DIR}/include")
 
-add_library(glad SHARED ${GLAD_DIR}/src/glad.c)
 # target_include_directories(glad PRIVATE "${GLAD_DIR}/include")
 
-
-#glad_add_library(glad SHARED MX API gl:core=3.3)
-
-
 find_package(OpenGL REQUIRED)
-target_link_libraries(engine OpenGL::GL glad glfw)
+target_link_libraries(engine PUBLIC OpenGL::GL glad glfw)
 
 # add_library("glad" "${GLAD_DIR}/src/glad.c")
-# target_include_directories("glad" PRIVATE ${GLAD_DIR}/include)
 # target_include_directories(engine PRIVATE "${GLAD_DIR}/include")
 # target_link_libraries(engine "glad" "${CMAKE_DL_LIBS}")
 
