add glm support
get dem MATHss!!

--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -82,6 +82,8 @@ include_directories(
 target_precompile_headers(engine PRIVATE ${CMAKE_SOURCE_DIR}/engine/src/bepch.h)
 
 add_subdirectory(${CMAKE_SOURCE_DIR}/engine/vendor/glfw-3.3.2)
+add_subdirectory(${CMAKE_SOURCE_DIR}/engine/vendor/glm/glm)
+#add_library(glm SHARED ${CMAKE_SOURCE_DIR}/engine/vendor/glm/glm)
 add_library(glad SHARED ${GLAD_DIR}/src/glad.c)
 #add_subdirectory(${CMAKE_SOURCE_DIR}/engine/vendor/imgui)
 # target_include_directories(engine PUBLIC "${GLAD_DIR}/include")
@@ -89,7 +91,7 @@ add_library(glad SHARED ${GLAD_DIR}/src/glad.c)
 # target_include_directories(glad PRIVATE "${GLAD_DIR}/include")
 
 find_package(OpenGL REQUIRED)
-target_link_libraries(engine PUBLIC OpenGL::GL glad glfw)
+target_link_libraries(engine PUBLIC OpenGL::GL glad glfw glm)
 
 # add_library("glad" "${GLAD_DIR}/src/glad.c")
 # target_include_directories(engine PRIVATE "${GLAD_DIR}/include")
