--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -121,7 +121,17 @@ set(ENGINE_HEADER_FILES
   ${imgui_root}/imstb_rectpack.h
   ${imgui_root}/imstb_textedit.h
   ${imgui_root}/imstb_truetype.h
-  )
+)
+
+set(MATH_DIR "${CMAKE_SOURCE_DIR}/engine/vendor/math")
+set(MATH_HEADERS
+  ${MATH_DIR}/math.h
+  ${MATH_DIR}/matrix.h
+  ${MATH_DIR}/vector.h
+)
+add_library(bucket_math STATIC
+  ${MATH_HEADERS})
+SET_TARGET_PROPERTIES(bucket_math PROPERTIES LINKER_LANGUAGE CXX)
 
 set(GLAD_DIR "${CMAKE_SOURCE_DIR}/engine/vendor/glad")
 
@@ -155,7 +165,7 @@ add_library(glad STATIC ${GLAD_DIR}/src/glad.c)
 # target_include_directories(glad PRIVATE "${GLAD_DIR}/include")
 
 find_package(OpenGL REQUIRED)
-target_link_libraries(engine PUBLIC OpenGL::GL glad glfw glm stb_image)
+target_link_libraries(engine PUBLIC OpenGL::GL glad glfw glm stb_image bucket_math)
 
 # add_library("glad" "${GLAD_DIR}/src/glad.c")
 # target_include_directories(engine PRIVATE "${GLAD_DIR}/include")
