--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,8 @@ set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
 
 set(CMAKE_CXX_STANDARD 17)
 
+set(ENV{ROOT_DIR} ${CMAKE_SOURCE_DIR})
+
 if (WIN32 OR MSVC)
   add_compile_definitions(BE_PLATFORM_WINDOWS)
 else()
