--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -126,15 +126,7 @@ set(ENGINE_HEADER_FILES
 
 )
 
-#set(MATH_DIR "${CMAKE_SOURCE_DIR}/engine/libs/math")
-#set(MATH_HEADERS
-#  ${MATH_DIR}/math.h
-#  ${MATH_DIR}/matrix.h
-#  ${MATH_DIR}/vector.h
-#)
-#add_library(bucket_math STATIC
-#  ${MATH_HEADERS})
-#SET_TARGET_PROPERTIES(bucket_math PROPERTIES LINKER_LANGUAGE CXX)
+set(MATH_DIR "${CMAKE_SOURCE_DIR}/engine/lib/math")
 
 set(GLAD_DIR "${CMAKE_SOURCE_DIR}/engine/vendor/glad")
 
@@ -161,6 +153,7 @@ add_library(stb_image STATIC
 add_subdirectory(${CMAKE_SOURCE_DIR}/engine/vendor/spdlog)
 add_subdirectory(${CMAKE_SOURCE_DIR}/engine/vendor/glfw-3.3.2)
 add_subdirectory(${CMAKE_SOURCE_DIR}/engine/vendor/glm/glm)
+add_subdirectory(${MATH_DIR})
 #add_library(glm SHARED ${CMAKE_SOURCE_DIR}/engine/vendor/glm/glm)
 add_library(glad STATIC ${GLAD_DIR}/src/glad.c)
 #add_subdirectory(${CMAKE_SOURCE_DIR}/engine/vendor/imgui)
@@ -169,7 +162,7 @@ add_library(glad STATIC ${GLAD_DIR}/src/glad.c)
 # target_include_directories(glad PRIVATE "${GLAD_DIR}/include")
 
 find_package(OpenGL REQUIRED)
-target_link_libraries(engine PUBLIC OpenGL::GL glad glfw glm stb_image  spdlog)
+target_link_libraries(engine PUBLIC OpenGL::GL glad glfw glm stb_image bucket_math spdlog)
 
 # add_library("glad" "${GLAD_DIR}/src/glad.c")
 # target_include_directories(engine PRIVATE "${GLAD_DIR}/include")
